--- a/1 - What is HPC?.ipynb
+++ b/1 - What is HPC?.ipynb
@@ -27,17 +27,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3.1248\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Monte Carlo Pi Simulation\n",
     "import random as r\n",
@@ -68,7 +60,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## II.Why is HPC important?\n"
+    "## II.Why is HPC important?\n",
+    "High performance computing opens the door to large scale data analysis, computational science, and research computing. It is useful in a number of scenarios, including where software is too time-critical, too performance critical, or simply too big to run on a traditional system.\n",
+    "\n",
+    "Let's take a look at a few examples of scenarios where you would need an HPC System or an HPC System drastically changes your process.\n",
+    "\n",
+    "- **Scenario 1: Real-Time App:** Let's imagine you're an app developer working for The Weather Channel. You want to make an app that automatically detects where a person is, very specifically, and then uses your complex AccuWeather analysis to predict the likelihood of rain any time in the next seven days for that specific location. You would like your user to be able to get this data within seconds. There is no way you will be able to serve this user, let alone your millions of other users, this data with a single traditional computer. Having an HPC system available here is extremely important, in order to ensure your users get their weather in close to real time. ![Weather Models](http://aemstatic-ww1.azureedge.net/content/ias/en/articles/2012/08/honeywell-3d/_jcr_content/leftcolumn/article/headerimage.img.jpg/1345596242801.jpg \"\")\n",
+    "- **Scenario 2: Designing a New Car or Plane:** You're a brand new aerospace engineer working for the Mercedes-Benz Formula One team. You have the off season (usually between December and May, or about five months) to design a new car which is better than all the cars that beat you last year. Traditionally, the way to do this is start with a small model, put it in a wind tunnel, evaluate it, and repeat this process. Then, you slowly scale up to bigger models and eventually start building concept cars. However, you only have five months, and each model may take a month to design and produce. You simply don't have time. Instead, you get started with your HPC system and start creating some [Computational Fluid Dynamics](https://en.wikipedia.org/wiki/Computational_fluid_dynamics) models which you can then use to create your new car with plenty of time to spare. The image below is the output of a CFD model. ![CFD model of car](https://upload.wikimedia.org/wikipedia/commons/f/fa/Verus_Engineering_Porsche_987.2_Ventus_2_Package.png \" \")"
    ]
   },
   {
@@ -77,7 +75,9 @@
     "code_folding": []
    },
    "source": [
-    "### Example 1.2 - Multiplying Matrices in Parallel"
+    "### Example 1.2 - Multiplying Matrices in Parallel\n",
+    "\n",
+    "Though it's not as large-scale as either of the examples mentioned above, a very applicable and useful application of parallel programming is matrix multiplication. Runtime of multiplying two _n_ by _n_ matrices is in complexity class O(_n<sup>3</sup>_). This means that a good parallel algorithm which can make use of multiple cores for this process is very important. An example of a parallel algorithm to multiply matrices is below."
    ]
   },
   {
@@ -85,13 +85,92 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Necessary definitions for matrix multiplication\n",
+    "import ctypes\n",
+    "import multiprocessing\n",
+    "import numpy\n",
+    "\n",
+    "def read(filename):\n",
+    "    lines = open(filename, 'r').read().splitlines()\n",
+    "    A = []\n",
+    "    B = []\n",
+    "    matrix = A\n",
+    "    for line in lines:\n",
+    "        if line != \"\":\n",
+    "            matrix.append(map(int, line.split(\"\\t\")))\n",
+    "        else:\n",
+    "            matrix = B\n",
+    "    return A, B\n",
+    "\n",
+    "def printMatrix(matrix, f):\n",
+    "    for line in matrix:\n",
+    "        f.write(\"\\t\".join(map(str,line)) + \"\\n\")\n",
+    "\n",
+    "def lineMult(start):\n",
+    "    global A, B, mp_arr, part\n",
+    "    n = len(A)\n",
+    "    # create a new numpy array using the same memory as mp_arr\n",
+    "    arr = numpy.frombuffer(mp_arr.get_obj(), dtype=ctypes.c_int)\n",
+    "    C = arr.reshape((n,n))\n",
+    "    for i in range(start, start+part):\n",
+    "        for k in range(n):\n",
+    "            for j in range(n):\n",
+    "                C[i][j] += list(A[i])[k] * list(B[k])[j]\n",
+    "\n",
+    "def ikjMatrixProduct(A, B, threadNumber):\n",
+    "    n = len(A)\n",
+    "    \n",
+    "    pool = multiprocessing.Pool(threadNumber)\n",
+    "\n",
+    "    pool.map(lineMult, range(0, int(n), int(part)))\n",
+    "    # mp_arr and arr share the same memory\n",
+    "    arr = numpy.frombuffer(mp_arr.get_obj(), dtype=ctypes.c_int) \n",
+    "    C = arr.reshape((n,n))\n",
+    "    return C\n",
+    "\n",
+    "def extant_file(x):\n",
+    "    \"\"\"\n",
+    "    'Type' for argparse - checks that file exists but does not open.\n",
+    "    \"\"\"\n",
+    "    if not isfile(x):\n",
+    "        raise argparse.ArgumentError(\"{0} does not exist\".format(x))\n",
+    "    return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Run the matrix multiplication\n",
+    "\n",
+    "import argparse, sys\n",
+    "from os.path import isfile\n",
+    "from argparse import ArgumentParser\n",
+    "\n",
+    "A, B = read(\"data/matrix_mult.in\")\n",
+    "\n",
+    "n, m, p = len(A), len(list(A[0])), len(list(B[0]))\n",
+    "\n",
+    "threadNumber = 32\n",
+    "part = len(A) // threadNumber\n",
+    "if part < 1:\n",
+    "    part = 1\n",
+    "\n",
+    "# shared, can be used from multiple processes\n",
+    "mp_arr = multiprocessing.Array(ctypes.c_int, n*p)\n",
+    "C = ikjMatrixProduct(A, B, threadNumber)\n",
+    "printMatrix(C, sys.stdout)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## III.Multiprocessing"
+    "## III.Multiprocessing\n",
+    "One of the reasons this course is written in python is that python is an easy to use language "
    ]
   },
   {
@@ -133,7 +212,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## V.Power Comparison"
+    "## V.Power and Speed Comparison"
    ]
   },
   {
@@ -181,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
