continuing to work on notebook 1

--- a/1 - What is HPC?.ipynb
+++ b/1 - What is HPC?.ipynb
@@ -170,14 +170,15 @@
    "metadata": {},
    "source": [
     "## III.Multiprocessing\n",
-    "One of the reasons this course is written in python is that python is an easy to use language "
+    "One of the reasons this course is written in python is that python is an easy to use language which is commonly used for computational science and other HPC applications. Another reason that Python was chosen for this course is Python's powerful _multiprocessing_ library. _Multiprocessing_ allows users to open subprocesses within python in order to run many different snippets of python code all at once. In the following examples, we will use _multiprocessing_ to speed up our computations. The following image is a description of how multiprocessing can help speed up Python programs: ![Multiprocessing Diagram](https://sebastianraschka.com/images/blog/2014/multiprocessing_intro/multiprocessing_scheme.png \"\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Example 1.3 - Parallelizing loops with Multiprocessing"
+    "### Example 1.3 - Basic Parallelization with Multiprocessing\n",
+    "In this example, we are going to create random strings in parallel and in serial. This is a good task to parallelize because each random string does not depend at all on the random strings that came before it. We will discuss in greater detail what makes tasks better candidates for parallelization in topic 6: algorithm analysis."
    ]
   },
   {
@@ -185,41 +186,27 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "## IV.Parallelism and HPC"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Example 1.4 - Monte Carlo Pi in Parallel"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## V.Power and Speed Comparison"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Example 1.5 - Pi in Serial vs Parallel"
+    "# Define rand_string function to generate one random string\n",
+    "\n",
+    "import random\n",
+    "import string\n",
+    "import multiprocessing\n",
+    "\n",
+    "random.seed(123)\n",
+    "\n",
+    "# Define an output queue\n",
+    "output = multiprocessing.Queue()\n",
+    "\n",
+    "# define a example function\n",
+    "def rand_string(length, output):\n",
+    "    \"\"\" Generates a random string of numbers, lower- and uppercase chars. \"\"\"\n",
+    "    rand_str = ''.join(random.choice(\n",
+    "                        string.ascii_lowercase\n",
+    "                        + string.ascii_uppercase\n",
+    "                        + string.digits)\n",
+    "                   for i in range(length))\n",
+    "    output.put(rand_str)\n"
    ]
   },
   {
@@ -227,7 +214,246 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Call our rand_string in serial\n",
+    "\n",
+    "import time\n",
+    "NUM_STRINGS = 100\n",
+    "\n",
+    "processes = []\n",
+    "before = time.time()\n",
+    "for _ in range(NUM_STRINGS):\n",
+    "    processes.append(rand_string(5, output))\n",
+    "results = [output.get() for p in processes]\n",
+    "after = time.time()\n",
+    "\n",
+    "print(\"Generated {} strings in {} seconds\".format(NUM_STRINGS, after-before))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Call our rand_string in parallel\n",
+    "\n",
+    "import time\n",
+    "\n",
+    "before = time.time()\n",
+    "NUM_STRINGS = 100\n",
+    "# Setup a list of processes that we want to run\n",
+    "processes = []\n",
+    "for _ in range(NUM_STRINGS):\n",
+    "    p = multiprocessing.Process(target=rand_string, args=(5, output))\n",
+    "    processes.append(p)\n",
+    "\n",
+    "# Run processes\n",
+    "for p in processes:\n",
+    "    p.start()\n",
+    "\n",
+    "# Exit the completed processes\n",
+    "for p in processes:\n",
+    "    p.join()\n",
+    "\n",
+    "# Get process results from the output queue\n",
+    "before = time.time()\n",
+    "results = [output.get() for p in processes]\n",
+    "after = time.time()\n",
+    "\n",
+    "print('\\n')\n",
+    "print(\"Generated {} strings in {} seconds\".format(NUM_STRINGS, after-before))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As you can see, the task runs more than five times faster in parallel than it does in serial"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## IV.Parallelism and HPC\n",
+    "Parallelism is at the core of any HPC system. The way that HPC systems can be many hundreds of thousands of times faster than traditional systems is through massive parallelism. Some HPC systems have a total of many millions of cores, distributed among many systems (known as 'nodes'), as compared to the 4-8 of a standard modern desktop. This massive hardware parallelism, combined with some clever parallel algorithms, can lead to amazing processing power. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Example 1.4 - Monte Carlo Pi in Parallel\n",
+    "In this example, we will compute pi through monte carlo approximation, similar to the way we did it before, except this time we will do it in parallel. As mentioned earlier, the monte carlo pi calculation is a very easily parallelized algorithm, and there should be a large speedup when it is run in parallel."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Defining parallel monte carlo pi calculation \n",
+    "\n",
+    "import random\n",
+    "import multiprocessing\n",
+    "from multiprocessing import Pool\n",
+    "\n",
+    "\n",
+    "#caculate the number of points in the unit circle\n",
+    "#out of n points\n",
+    "def monte_carlo_pi_part(n):\n",
+    "    \n",
+    "    count = 0\n",
+    "    for i in range(n):\n",
+    "        x=random.random()\n",
+    "        y=random.random()\n",
+    "        \n",
+    "        # if it is within the unit circle\n",
+    "        if x*x + y*y <= 1:\n",
+    "            count=count+1\n",
+    "        \n",
+    "    #return\n",
+    "    return count   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You have 32 CPUs\n",
+      "Esitmated value of Pi: 3.1416516 \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calling parallel monte carlo pi simulation\n",
+    "\n",
+    "np = multiprocessing.cpu_count()\n",
+    "print('You have {0:1d} CPUs'.format(np))\n",
+    "\n",
+    "# Nummber of points to use for the Pi estimation\n",
+    "n = 10000000\n",
+    "\n",
+    "# iterable with a list of points to generate in each worker\n",
+    "# each worker process gets n/np number of points to calculate Pi from\n",
+    "\n",
+    "part_count=[n//np for i in range(np)]\n",
+    "\n",
+    "#Create the worker pool\n",
+    "# http://docs.python.org/library/multiprocessing.html#module-multiprocessing.pool\n",
+    "pool = Pool(processes=np)   \n",
+    "\n",
+    "# parallel map\n",
+    "count=pool.map(monte_carlo_pi_part, part_count)\n",
+    "\n",
+    "print(\"Esitmated value of Pi: {} \".format(sum(count)/(n*1.0)*4))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## V.Power and Speed Comparison\n",
+    "One definition of HPC has to do with scale. Some people believe that an HPC system is defined by how powerful it is rather than by how it is designed. Computational power has increased an incredible amount recently and HPC scale systems are now easily accessible to many people. The following graphic shows how powerful modern systems can be: ![hpc system power comparison](https://i.imgur.com/frXsxpz.png)\n",
+    "\n",
+    "As you might guess, parallel algorithms have the potential to be much faster than serial algorithms. In order to show this, we are going to use the two versions of monte carlo pi that we have designed in this notebook and time them against each other. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Example 1.5 - Pi in Serial vs Parallel\n",
+    "In this example, we will pit against each other our parallel and serial pi approximation calculations. To do this, we will use the jupyter \"magic\" `%time` to time the two algorithms."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Esitmated value of Pi: 3.158 \n",
+      "CPU times: user 105 ms, sys: 839 ms, total: 943 ms\n",
+      "Wall time: 712 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Calling parallel monte carlo pi simulation\n",
+    "\n",
+    "# Nummber of points to use for the Pi estimation\n",
+    "n = 10000\n",
+    "\n",
+    "# iterable with a list of points to generate in each worker\n",
+    "# each worker process gets n/np number of points to calculate Pi from\n",
+    "\n",
+    "part_count=[n//np for i in range(np)]\n",
+    "\n",
+    "#Create the worker pool\n",
+    "# http://docs.python.org/library/multiprocessing.html#module-multiprocessing.pool\n",
+    "pool = Pool(processes=np)   \n",
+    "\n",
+    "# parallel map\n",
+    "count=pool.map(monte_carlo_pi_part, part_count)\n",
+    "\n",
+    "print(\"Esitmated value of Pi: {} \".format(sum(count)/(n*1.0)*4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.1624\n",
+      "CPU times: user 11 ms, sys: 406 µs, total: 11.4 ms\n",
+      "Wall time: 10.8 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "\n",
+    "# Calling serial monte carlo pi simulation\n",
+    "# Monte Carlo Pi Simulation\n",
+    "import random as r\n",
+    "import math as m\n",
+    "\n",
+    "# Number of darts that land inside.\n",
+    "inside = 0\n",
+    "# Total number of darts to throw.\n",
+    "total = 10000\n",
+    "\n",
+    "# Iterate for the number of darts.\n",
+    "for i in range(0, total):\n",
+    "    # Generate random x, y in [0, 1].\n",
+    "    x2 = r.random()**2\n",
+    "    y2 = r.random()**2\n",
+    "    # Increment if inside unit circle.\n",
+    "    if m.sqrt(x2 + y2) < 1.0:\n",
+    "        inside += 1\n",
+    "\n",
+    "# inside / total = pi / 4\n",
+    "pi = (float(inside) / total) * 4\n",
+    "\n",
+    "# It works!\n",
+    "print(pi)"
+   ]
   },
   {
    "cell_type": "markdown",
