finished notebook 2, added data as necessary

--- a/2 - Resource Managers and Schedulers.ipynb
+++ b/2 - Resource Managers and Schedulers.ipynb
@@ -76,9 +76,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Hello HPC\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Opening Processes\n",
     "# There is some code in /home/users/glick/intro-to-hpc/data/hello.c\n",
@@ -86,7 +96,8 @@
     "import os\n",
     "\n",
     "# Compile the code - There should be no output\n",
-    "process = os.popen(\"cc /home/users/glick/intro-to-hpc/data/hello.c -o /home/users/glick/intro-to-hpc/data/hello.out\")\n",
+    "process = os.popen(\"cc /home/users/glick/intro-to-hpc/data/hello.c\\\n",
+    "-o /home/users/glick/intro-to-hpc/data/hello.out\")\n",
     "print(process.read())\n",
     "\n",
     "# Run the code\n",
@@ -98,28 +109,96 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## II. What is a Resource Manager?"
+    "## II. What is a Resource Manager?\n",
+    "You will recall that we defined an HPC system as one made up of smaller constituent systems all working together. However, until now, all of the code we have written has run on just this one computer, which is the login node of a cluster. This is because we have not yet learned to use a _resource manager_. A _resource manager_ is a program that contains both a server, running on a head node, and any number of clients, running on worker nodes. The client allows worker nodes to ask the head node for work, and the server provides jobs to carry out. Almost all clusters have some form of resource manager on them which allows users to submit and monitor jobs to be run on the worker nodes. Most resource managers also have scheduling systems which allow them to run jobs in different orders based on a number of parameters. The following image describes the job flow of Sun GridEngine, a commonly used resource manager: ![SGE architecture](https://2eof2j3oc7is20vt9q3g7tlo5xe-wpengine.netdna-ssl.com/wp-content/uploads/2015/10/Docker_Grid_Engine_R2.jpg)\n",
+    "Users submit tasks to a queue, which are then ordered by priority rules set by administrators, and those jobs get run on any available backend resources."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Example 2.2 - Submitting and Monitoring a Simple Resource Manager Job"
+    "### Example 2.2 - Submitting and Monitoring a Simple Resource Manager Job\n",
+    "The resource manager we have installed on this system is called GridEngine, commonly abbreviated to SGE. In this example, we will use `os.popen()` and SGE to submit a simple job to the resource manager and monitor it.\n",
+    "\n",
+    "The SGE interface is based on the `qsub` and `qstat` commands. `qsub` allows users to submit arbitrary shell scripts and `qstat` is used for monitoring jobs."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your job 2205 (\"submit_script.sh\") has been submitted\n",
+      "job-ID  prior   name       user         state submit/start at     queue                          slots ja-task-ID \n",
+      "-----------------------------------------------------------------------------------------------------------------\n",
+      "   2157 0.60500 test5      glick        r     04/27/2018 15:50:36 all.q@tomato.blt.lclark.local     15        \n",
+      "   2158 0.60500 test5      glick        r     04/27/2018 15:50:51 all.q@bacon.blt.lclark.local      15        \n",
+      "   2159 0.50500 test5      glick        r     04/27/2018 15:50:51 all.q@lettuce.blt.lclark.local     4        \n",
+      "   2205 0.00000 submit_scr glick        qw    05/10/2018 18:07:15                                    1        \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Interacting with the resource manager\n",
+    "\n",
+    "import os\n",
+    "import subprocess\n",
+    "import time\n",
+    "\n",
+    "path = \"/home/users/glick/intro-to-hpc/data/submit_script.sh\"\n",
+    "outpath = \"/home/users/glick/intro-to-hpc/data/job_out.out\"\n",
+    "\n",
+    "os.environ['SGE_ROOT'] = '/local/cluster/sge'\n",
+    "os.remove(path)\n",
+    "os.remove(outpath)\n",
+    "\n",
+    "\n",
+    "# Write submit scripts\n",
+    "with open(path,\"w\") as file:\n",
+    "    file.write(\"#!/bin/bash\\n\")\n",
+    "    file.write(\"echo h3ll0! >> {}\\n\".format(outpath))\n",
+    "    file.write(\"sleep 5\\n\")\n",
+    "    file.write(\"echo h3ll0! >> {}\\n\".format(outpath))\n",
+    "\n",
+    "# Submit job\n",
+    "!qsub /home/users/glick/intro-to-hpc/data/submit_script.sh\n",
+    "\n",
+    "# List running jobs\n",
+    "!qstat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "h3ll0\n",
+      "h3ll0\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Read output file (after waiting for job to complete) - this could take 15 seconds or more\n",
+    "with open(outputpath) as file:\n",
+    "    print(file.read())"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## III. Programmatic Interaction"
+    "## III. Programmatic Interaction\n",
+    "Sometimes, you don't want to manually submit a job for each task you need to carry out. In this example, we will use a python loop to submit lots of jobs."
    ]
   },
   {
@@ -131,23 +210,161 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your job 2238 (\"STDIN\") has been submitted\n",
+      "Your job 2239 (\"STDIN\") has been submitted\n",
+      "Your job 2240 (\"STDIN\") has been submitted\n",
+      "Your job 2241 (\"STDIN\") has been submitted\n",
+      "Your job 2242 (\"STDIN\") has been submitted\n",
+      "Your job 2243 (\"STDIN\") has been submitted\n",
+      "Your job 2244 (\"STDIN\") has been submitted\n",
+      "Your job 2245 (\"STDIN\") has been submitted\n",
+      "Your job 2246 (\"STDIN\") has been submitted\n",
+      "Your job 2247 (\"STDIN\") has been submitted\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Submit lots of SGE jobs all at once\n",
+    "\n",
+    "manyout = \"/home/users/glick/intro-to-hpc/data/manyjob_out.out\"\n",
+    "os.remove(manyout)\n",
+    "\n",
+    "for i in range(1,11):\n",
+    "    !echo \"echo $i >> $manyout\" | qsub"
+   ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 46,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "6\n",
+      "4\n",
+      "2\n",
+      "9\n",
+      "1\n",
+      "5\n",
+      "8\n",
+      "7\n",
+      "10\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "## IV. Basic Dataflows"
+    "# Read output file (after waiting for job to complete) - this could take 15 seconds or more\n",
+    "with open(manyout) as file:\n",
+    "    print(file.read())"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Example 2.4 - Array Job Plus Summary Statistics"
+    "Because this job is running in parallel, each number is not guaranteed to finish in the order in which it started. This is something that always needs to be considered when writing parallel algorithms."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## IV. Basic Dataflows\n",
+    "Most of the time, a simple set of jobs running all at once is not enough for your purposes. Many times, you want to generate lots of different kinds of data all at once, and then perform some kind of summary statistics on it. Situations like this are often referred to as _dataflows_. Dataflows resemble real-world HPC workloads more accurately than the other examples we have looked at in the course so far. The following graphic represents a very simple dataflow to generate random numbers in parallel and take the average.\n",
+    "```\n",
+    "App Calls    rand() rand() rand()\n",
+    "              \\     |     /\n",
+    "               a    b    c\n",
+    "                \\   |   /\n",
+    "App Call        avg_points()\n",
+    "                    |\n",
+    "                   avg\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Example 2.4 - Array Job Plus Summary Statistics\n",
+    "In this example, we will implement the dataflow described in the descriptive text above.\n",
+    "We will use Python's `random` library to generate random numbers and print them to a file using SGE, then we will average all of them."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your job 2258 (\"STDIN\") has been submitted\n",
+      "Your job 2259 (\"STDIN\") has been submitted\n",
+      "Your job 2260 (\"STDIN\") has been submitted\n",
+      "Your job 2261 (\"STDIN\") has been submitted\n",
+      "Your job 2262 (\"STDIN\") has been submitted\n",
+      "Your job 2263 (\"STDIN\") has been submitted\n",
+      "Your job 2264 (\"STDIN\") has been submitted\n",
+      "Your job 2265 (\"STDIN\") has been submitted\n",
+      "Your job 2266 (\"STDIN\") has been submitted\n",
+      "Your job 2267 (\"STDIN\") has been submitted\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "# Submit lots of SGE jobs all at once\n",
+    "\n",
+    "rand_out = \"/home/users/glick/intro-to-hpc/data/rand_out.out\"\n",
+    "os.remove(rand_out)\n",
+    "\n",
+    "# Generate random numbers\n",
+    "for _ in range(1,11):\n",
+    "    !echo \"echo $((1 + RANDOM % 100)) >> $rand_out\" | qsub"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "62\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Read output file (after waiting for job to complete) - this could take 15 seconds or \n",
+    "# Now, we compute the average\n",
+    "\n",
+    "rand_out = \"/home/users/glick/intro-to-hpc/data/rand_out.out\"\n",
+    "\n",
+    "with open(rand_out) as file:\n",
+    "    lines = [int(i) for i in file.readlines()]\n",
+    "    print(sum(lines)//len(lines))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 2. Array Dataflow with `qsub`"
    ]
   },
   {
@@ -155,21 +372,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "## Exercise 2. Array Dataflow with `sys`"
+    "# Your code goes here"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
