working on notebooks 3 and 4

--- a/2 - Resource Managers and Schedulers.ipynb
+++ b/2 - Resource Managers and Schedulers.ipynb
@@ -76,19 +76,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Hello HPC\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Opening Processes\n",
     "# There is some code in /home/users/glick/intro-to-hpc/data/hello.c\n",
@@ -126,23 +116,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Your job 2205 (\"submit_script.sh\") has been submitted\n",
-      "job-ID  prior   name       user         state submit/start at     queue                          slots ja-task-ID \n",
-      "-----------------------------------------------------------------------------------------------------------------\n",
-      "   2157 0.60500 test5      glick        r     04/27/2018 15:50:36 all.q@tomato.blt.lclark.local     15        \n",
-      "   2158 0.60500 test5      glick        r     04/27/2018 15:50:51 all.q@bacon.blt.lclark.local      15        \n",
-      "   2159 0.50500 test5      glick        r     04/27/2018 15:50:51 all.q@lettuce.blt.lclark.local     4        \n",
-      "   2205 0.00000 submit_scr glick        qw    05/10/2018 18:07:15                                    1        \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Interacting with the resource manager\n",
     "\n",
@@ -174,19 +150,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "h3ll0\n",
-      "h3ll0\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Read output file (after waiting for job to complete) - this could take 15 seconds or more\n",
     "with open(outputpath) as file:\n",
@@ -210,28 +176,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Your job 2238 (\"STDIN\") has been submitted\n",
-      "Your job 2239 (\"STDIN\") has been submitted\n",
-      "Your job 2240 (\"STDIN\") has been submitted\n",
-      "Your job 2241 (\"STDIN\") has been submitted\n",
-      "Your job 2242 (\"STDIN\") has been submitted\n",
-      "Your job 2243 (\"STDIN\") has been submitted\n",
-      "Your job 2244 (\"STDIN\") has been submitted\n",
-      "Your job 2245 (\"STDIN\") has been submitted\n",
-      "Your job 2246 (\"STDIN\") has been submitted\n",
-      "Your job 2247 (\"STDIN\") has been submitted\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Submit lots of SGE jobs all at once\n",
+    "\n",
+    "os.environ['SGE_ROOT'] = '/local/cluster/sge'\n",
     "\n",
     "manyout = \"/home/users/glick/intro-to-hpc/data/manyjob_out.out\"\n",
     "os.remove(manyout)\n",
@@ -242,27 +193,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n",
-      "6\n",
-      "4\n",
-      "2\n",
-      "9\n",
-      "1\n",
-      "5\n",
-      "8\n",
-      "7\n",
-      "10\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Read output file (after waiting for job to complete) - this could take 15 seconds or more\n",
     "with open(manyout) as file:\n",
@@ -304,28 +237,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Your job 2258 (\"STDIN\") has been submitted\n",
-      "Your job 2259 (\"STDIN\") has been submitted\n",
-      "Your job 2260 (\"STDIN\") has been submitted\n",
-      "Your job 2261 (\"STDIN\") has been submitted\n",
-      "Your job 2262 (\"STDIN\") has been submitted\n",
-      "Your job 2263 (\"STDIN\") has been submitted\n",
-      "Your job 2264 (\"STDIN\") has been submitted\n",
-      "Your job 2265 (\"STDIN\") has been submitted\n",
-      "Your job 2266 (\"STDIN\") has been submitted\n",
-      "Your job 2267 (\"STDIN\") has been submitted\n"
+      "Your job 2268 (\"STDIN\") has been submitted\n",
+      "Your job 2269 (\"STDIN\") has been submitted\n",
+      "Your job 2270 (\"STDIN\") has been submitted\n",
+      "Your job 2271 (\"STDIN\") has been submitted\n",
+      "Your job 2272 (\"STDIN\") has been submitted\n",
+      "Your job 2273 (\"STDIN\") has been submitted\n",
+      "Your job 2274 (\"STDIN\") has been submitted\n",
+      "Your job 2275 (\"STDIN\") has been submitted\n",
+      "Your job 2276 (\"STDIN\") has been submitted\n",
+      "Your job 2277 (\"STDIN\") has been submitted\n"
      ]
     }
    ],
    "source": [
     "import random\n",
+    "import os\n",
+    "os.environ['SGE_ROOT'] = '/local/cluster/sge'\n",
+    "\n",
     "# Submit lots of SGE jobs all at once\n",
     "\n",
     "rand_out = \"/home/users/glick/intro-to-hpc/data/rand_out.out\"\n",
@@ -338,14 +274,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "62\n"
+      "31\n"
      ]
     }
    ],
